added background position to cover image

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div style="background-image: url(<%= @room.imgurl %>); background-repeat: no-repeat; background-size: cover; height: 350px;margin-top:2em;">
+    <div style="background-image: url(<%= @room.imgurl %>); background-repeat: no-repeat; background-size: cover; background-position: center center; height: 350px;margin-top:2em;">
       <div class="room-header"><h2><%= @room.name %></h2></div>
     </div>
   </div>
