--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -5,9 +5,10 @@
     <div class="col-md-12">
       <h2><%= @meeting.title.titleize %> in <%= @meeting.room.name.titleize %></h2>
       <div class="meeting-buttons">
-        
-        <%= link_to 'Join', join_employee_path(@meeting.id), method: 'POST', class: 'btn btn-default join-button' %>
 
+        <% if @meeting_owner == false %>
+            <%= link_to 'Join', join_employee_path(@meeting.id), method: 'POST', class: 'btn btn-default join-button' %>
+        <% end %>
         <%= link_to 'Edit', edit_meeting_path(@meeting), class: "btn btn-default" %>
         <%= link_to 'Back to Meetings', meetings_path, class: "btn btn-default" %>
       </div>
