--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,10 +1,10 @@
-<div class='container new-room'>
+<div class="container">
   <div class="row">
-    <div class='col-md-4 col-md-offset-4 form-box'>
-      <h2>New Room</h2>
+    <div class="col-md-4 col-md-offset-4 form-box">
+
+      <h2>New Meeting</h2>
 
       <%= render 'form' %>
-
     </div>
   </div>
 </div>
